v150
(xx/05/17)

Changes / Improvements / Optimizations:
DietPi-Config | Display Options: Added ability to enter MPEG2/VC1 keys for RPi: https://github.com/Fourdee/DietPi/issues/885
DietPi-RAMdisk | Log files now include timestamps. Thanks @WolfganP: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298241622
DietPi-Software | Blynk Server: Updated to latest version (0.24). Thanks @phonicmouse: https://github.com/Fourdee/DietPi/pull/912

Bug fixes:
General | Resolved an issue with incorrect temp readouts on H3/H2+ boards. Many thanks to @hectorcamp for the report: https://github.com/Fourdee/DietPi/issues/909
General | RPi kernel is now overwritten without cleanup, to prevent failed unzip (0bytes free space) rendering system unbootable: https://github.com/Fourdee/DietPi/issues/905
DietPi-RAMdisk | Disabled clearing of DietPi files, prior to disk save, in attempt to prevent loss of DietPi files in /boot, in 0byte free space situations: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298241622
DietPi-Software | At least 500MB of free space is now required on RootFS, before software will be installed: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298343932
DietPi-Update | At least 500MB of free space is now required on RootFS, before DietPi can be updated: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298343932

-----------------------------------------------------------------------------------------------------------

v149
(28/04/17)

New Device / Images:
OrangePi Zero Plus 2 (H3) | https://github.com/Fourdee/DietPi/issues/876#issuecomment-294464779
OrangePi Win | https://github.com/Fourdee/DietPi/issues/875#issuecomment-296160956
OrangePi Prime | https://github.com/Fourdee/DietPi/issues/874#issuecomment-297675707

Changes / Improvements / Optimizations: