@@ -10,10 +10,10 @@ setenv macaddr "00:1e:06:61:7a:72"
 #------------------------------------------------------------------------------------------------------
 # Basic Ubuntu Setup. Don't touch unless you know what you are doing.
 # --------------------------------
-setenv bootrootfs "console=tty1 root=/dev/mmcblk0p2 rootwait ro fsck.repair=yes"
+setenv bootrootfs "console=tty1 root=UUID=a4f12232-1670-43f4-8eca-49bfbe4d01ee rootwait ro fsck.repair=yes"
 
 # boot commands
-setenv bootcmd "fatload mmc 0:1 0x40008000 zImage; fatload mmc 0:1 0x42000000 uInitrd; fatload mmc 0:1 0x44000000 exynos5422-odroidxu3.dtb; bootz 0x40008000 0x42000000 0x44000000"
+setenv bootcmd "fatload mmc 0:1 0x40008000 zImage; fatload mmc 0:1 0x42000000 uInitrd; fatload mmc 0:1 0x44000000 exynos5422-odroidxu4.dtb; bootz 0x40008000 0x42000000 0x44000000"
 
 # --- Screen Configuration for HDMI --- #
 setenv videoconfig "drm_kms_helper.edid_firmware=edid/1920x1080.bin"
@@ -26,7 +26,7 @@ setenv vout "hdmi"
 # setenv vout "dvi"
 
 # --- CPU Governor Setup ---
-# - DietPi will override this setting to user configured in dietpi-config > Performance.
+# - DietPi will override this setting to user configured in dietpi-config > Performance Options > CPU gov.
 setenv governor "performance"
 
 #------------------------------------------------------------------------------
