@@ -92,24 +92,58 @@
 		fi
 	}
 
+	TARGET_MMCBLK='/dev/mmcblk0'
+	Find_Target_Mmcblk(){
+
+		local target_index=0
+		while true
+		do
+
+			#if [ -f "/dev/mmcblk$target_index" ]; then # -f -d -h -L fails detection...
+			ls /dev/mmcblk"$target_index"
+			if (( $? == 0 )); then
+
+				TARGET_MMCBLK="/dev/mmcblk$target_index"
+				/DietPi/dietpi/func/dietpi-notify 0 "$(date) | Found valid block device location $TARGET_MMCBLK" | tee -a "$FP_LOGFILE"
+				break
+
+			else
+
+				((target_index++))
+
+			fi
+
+			if (( $target_index > 10 )); then
+
+				/DietPi/dietpi/func/dietpi-notify 1 "$(date) | Failed to find a valid /dev/mmcblk* device" | tee -a "$FP_LOGFILE"
+				exit
+
+			fi
+
+		done
+
+	}
+
 	Partition_SD(){
+
+		Find_Target_Mmcblk
 
 		local rootfs_resize_limit=$(cat /DietPi/dietpi.txt | grep -m1 '^rootfs_resize_limit=' | sed 's/.*=//')
 
 		if (( $rootfs_resize_limit < 100 )); then
 
-			parted -s /dev/mmcblk0 unit % resizepart 2 $rootfs_resize_limit% || parted /dev/mmcblk0 unit % resizepart 2 Yes $rootfs_resize_limit%
+			parted -s $TARGET_MMCBLK unit % resizepart 2 $rootfs_resize_limit% || parted $TARGET_MMCBLK unit % resizepart 2 Yes $rootfs_resize_limit%
 
 		else
 
-			cat << _EOF_ | fdisk /dev/mmcblk0
+			cat << _EOF_ | fdisk $TARGET_MMCBLK
 p
 d
 2
 n
 p
 2
-$(parted /dev/mmcblk0 -ms unit s p | grep ':ext4::;' | sed 's/:/ /g' | sed 's/s//g' | awk '{ print $2 }')
+$(parted $TARGET_MMCBLK -ms unit s p | grep ':ext4::;' | sed 's/:/ /g' | sed 's/s//g' | awk '{ print $2 }')
 
 p
 w
@@ -122,8 +156,11 @@ _EOF_
 
 	Expand_SD(){
 
-		#Resize Filesystem to new partition size
-		resize2fs /dev/mmcblk0p2
+		Find_Target_Mmcblk
+
+		#Resize RootFS to new partition size
+		TARGET_MMCBLK+='p2'
+		resize2fs /dev/$TARGET_MMCBLK
 
 	}
 
