@@ -3,16 +3,17 @@
 Section "Device"
 	Identifier 	"Mali-Fbdev"
 	Driver		"armsoc"
-	Option		"fbdev"           	"/dev/fb0"
-	Option  	"Debug" 		"false"
-	Option		"DPMS"			"false"
-	Option		"Fimg2DExa"		"true"
-	Option		"DRI2"			"true"
-	Option		"DRI2_PAGE_FLIP"	"false"
-#	Option		"Fimg2DExaSolid"	"false"
-#	Option		"Fimg2DExaCopy"		"false"
-	Option		"Fimg2DExaComposite"	"true"
-        Option          "SWcursorLCD"           "false"
+	Option		"fbdev" "/dev/fb0"
+	Option  	"Debug" "false"
+	Option		"DPMS" "false"
+	Option		"Fimg2DExa" "true"
+	Option		"DRI2" "true"
+	Option		"DRI2_PAGE_FLIP" "false"
+#	Option		"Fimg2DExaSolid" "false"
+#	Option		"Fimg2DExaCopy" "false"
+	Option		"Fimg2DExaComposite" "true"
+    Option      "SWcursorLCD" "false"
+    Option      "NoFlip" "true"
 EndSection
 
 Section "Screen"
