@@ -131,6 +131,18 @@
 
 	fi
 
+	#XU4 requires UUID with 4.9 kernel: https://github.com/Fourdee/DietPi/issues/899#issuecomment-298912660
+	#	NB: Do this on EMMC due to SD mmcblk1
+	if (( $HW_MODEL == 11 )); then
+
+		UUID_CURRENT=$(blkid /dev/mmcblk0p1 -s UUID -o value)
+		sed -i "s#^/dev/mmcblk0p1#UUID=$UUID_CURRENT#g" /etc/fstab
+
+		UUID_CURRENT=$(blkid /dev/mmcblk0p2 -s UUID -o value)
+		sed -i "s#^/dev/mmcblk0p2#UUID=$UUID_CURRENT#g" /etc/fstab
+
+	fi
+
 	systemctl daemon-reload
 
 	#////////////////////////////////////
