@@ -2513,6 +2513,32 @@ _EOF_
 		#Remove ARMbian-config left on Neo image:
 		rm /etc/profile.d/check_first_login_reboot.sh &> /dev/null
 		#-------------------------------------------------------------------------------
+		#XU4 kernel 4.9 prep: https://github.com/Fourdee/DietPi/issues/899
+		if (( $HW_MODEL == 11 )); then
+
+			# - Replace /dev/mmcblk0p* in /etc/fstab + boot.ini with UUID as required by 4.9 kernel+uboot
+			#	MMC0p1
+			UUID_CURRENT=$(blkid /dev/mmcblk0p1 -s UUID -o value)
+			sed -i "s#^/dev/mmcblk0p1#UUID=$UUID_CURRENT#g" /etc/fstab
+			systemctl daemon-reload
+
+			#	MMC0p2
+			UUID_CURRENT=$(blkid /dev/mmcblk0p2 -s UUID -o value)
+			sed -i "s#^/dev/mmcblk0p2#UUID=$UUID_CURRENT#g" /etc/fstab
+			systemctl daemon-reload
+
+			sed -i "s#root=/dev/mmcblk0p2#root=UUID=$UUID_CURRENT#g" /DietPi/boot.ini
+
+			#	XU4 DTB (If XU4 board):
+			#Insert whiptail option here-------------------------------------------------------------
+			#sed -i "s#exynos5422-odroidxu3.dtb#exynos5422-odroidxu4.dtb#g" /DietPi/boot.ini
+			# ^^ only if kernel is installed.
+
+			# - reinstall Xserver, + xorg.conf noflip option
+			/DietPi/dietpi/dietpi-software reinstall 6
+
+		fi
+		#-------------------------------------------------------------------------------
 
 	fi
 
