@@ -2,6 +2,7 @@ v150
 (xx/05/17)
 
 Changes / Improvements / Optimizations:
+General | Partition resize/expansion now supports /dev/mmcblk[0-10]: https://github.com/Fourdee/DietPi/issues/899#issuecomment-298912660
 DietPi-Config | Display Options: Added ability to enter MPEG2/VC1 keys for RPi: https://github.com/Fourdee/DietPi/issues/885
 DietPi-RAMdisk | Log files now include timestamps. Thanks @WolfganP: https://github.com/Fourdee/DietPi/issues/905#issuecomment-298241622
 DietPi-Software | Blynk Server: Updated to latest version (0.24). Thanks @phonicmouse: https://github.com/Fourdee/DietPi/pull/912
